[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/World/LocalStar.gd" type="Script" id=1]
[ext_resource path="res://src/World/PulsingStar.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 90.05

[sub_resource type="CircleShape2D" id=2]

[node name="LocalStar" type="Area2D" groups=["star"]]
script = ExtResource( 1 )

[node name="PulsingStar" parent="." instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 252, 250 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="RadarDetector" type="KinematicBody2D" parent="." groups=["star"]]
position = Vector2( 251, 251 )
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarDetector"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_LocalStar_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LocalStar_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
